# torch-vulkan

./: .gitignore  CMakeLists.txt  persistent_pipeline.py  setup.py
csrc/: torch_vulkan.cpp  vulkan_allocator.cpp  vulkan_allocator.h  vulkan_context.cpp  vulkan_context.h  vulkan_engine.cpp  vulkan_engine.h
csrc/ops/: mm.cpp
csrc/shaders/: add.comp  add.spv  argmax.comp  argmax.spv  attention.comp  attention.spv  attention_kv.comp  attention_kv.spv  compile.sh  embedding.comp  embedding.spv  fused_norm_matmul_q4k.comp  fused_norm_matmul_q4k.spv  fused_norm_matmul_q5k.comp  fused_norm_matmul_q5k.spv  fused_norm_matmul_q6k.comp  fused_norm_matmul_q6k.spv  gelu.comp  gelu.spv  kv_store.comp  kv_store.spv  layer_norm.comp  layer_norm.spv  matmul_general.comp  matmul_general.spv  matmul_gpuq4.comp  matmul_gpuq4.spv  matmul_gpuq4_batch.comp  matmul_gpuq4_batch.spv  matmul_gpuq5.comp  matmul_gpuq5.spv  matmul_gpuq5_batch.comp  matmul_gpuq5_batch.spv  matmul_gpuq6.comp  matmul_gpuq6.spv  matmul_gpuq6_batch.comp  matmul_gpuq6_batch.spv  matmul_q4.comp  matmul_q4.spv  matmul_q4k.comp  (+27 more)
tests/: bench_layer.py  test_algo_cache.py  test_mm.py
torch_vulkan/: __init__.py
